--- a/planning/Bericht/Bericht.tex
+++ b/planning/Bericht/Bericht.tex
@@ -185,16 +185,16 @@ Um den Umgang mit den GeoTIFF Daten zu kapseln wurde eine Klasse \texttt{GeoTIFF
 Die einzelnen Funktionen werden weiter unten näher erläutert.
 
 \subsection{Datenextraktion}
-Der erste Schritt um mit einem Datensatz zu arbeiten ist die Extraktion der darin enthaltenen Daten. Wie bereits schon erläutert, wurde handelt es sich bei TIFF um ein sehr komplexes Format, das Dateien beliebiger Größe aufnehmen kann.
+Der erste Schritt, um mit einem Datensatz zu arbeiten, ist die Extraktion der darin enthaltenen Daten. Wie bereits schon erläutert, wurde handelt es sich bei TIFF um ein sehr komplexes Format, das Dateien beliebiger Größe aufnehmen kann.
 
-Da natürlich keine Routine zum Dekodieren diese Datenformats erstellt werden sollte, wurden mehrere Bibliotheken gesichtet, die zum Einlesen der Daten in einem TIFF geeignet sind. Ein wichtiger Aspekt dabei war, dass die Bibliothek eine effiziente Einleseroutine für Teildaten eines großen Datensatzes bereitstellen soll. Da die Geodaten sehr groß werden können, ist die Wahrscheinlichkeit gegeben, dass nicht der gesamte Datensatz auf einmal verarbeitet werden kann. Auch soll es möglich sein nur bestimmte Ausschnitte eines Datensatzes zu Durchmustern, um dadurch auf eine kurze Durchmusterungszeit zu kommen.
+Da natürlich keine Routine zum Dekodieren dieses Datenformats erstellt werden sollte, wurden mehrere Bibliotheken gesichtet, die zum Einlesen der Daten in einem TIFF geeignet sind. Ein wichtiger Aspekt dabei war, dass die Bibliothek eine effiziente Einleseroutine für Teildaten eines großen Datensatzes bereitstellen soll. Da die Geodaten sehr groß werden können, ist die Wahrscheinlichkeit gegeben, dass nicht der gesamte Datensatz auf einmal verarbeitet werden kann. Auch soll es möglich sein, nur bestimmte Ausschnitte eines Datensatzes zu Durchmustern, um dadurch auf eine kurze Durchmusterungszeit zu kommen.
 
 Nach diesen Kriterien ausgewählt, fiel die Wahl auf die Bibliothek "`LargeTIFFTools"'\footnote{siehe dazu: Deroulers et al., \href{http://www.diagnosticpathology.org/content/8/1/92}{Analyzing huge pathology images with open source software, Diagnostic Pathology 8:92 (2013)}.} und das darin enthaltene \texttt{tiffastcrop}. Diese Bibliothek lädt nicht das gesamte TIFF in den Speicher bevor es einen Ausschnitt entnimmt, sondern lediglich die tatsächlich benötigten Teile. Dies bringt nach Angaben des Bibliotheksautors dramatische Geschwindigkeitsvorteile gegenüber einer Reihe anderer gebräuchlicher Bibliotheken. (Diese Aussage konnte aufgrund fehlender "`großer"' Datensätze nicht überprüft werden. Das Laden der Bildausschnitte geht aber tatsächlich sehr schnell.) 
 
-Mit Hilfe dieser Bibliothek ist die Klasse \texttt{GeoTIFFHandler} in der Lage jeden beliebigen rechteckigen Ausschnitt eines GeoTIFF-Datensatzes in den Speicher zu laden und dort die Höhendaten als \texttt{FLOAT32} zur Verfügung zu stellen.
+Mit Hilfe dieser Bibliothek ist die Klasse \texttt{GeoTIFFHandler} in der Lage, jeden beliebigen rechteckigen Ausschnitt eines GeoTIFF-Datensatzes in den Speicher zu laden und dort die Höhendaten als \texttt{FLOAT32} zur Verfügung zu stellen.
 
-Falls der angeforderte Ausschnitt zu groß ist um in den Speicher zu passen wird automatisch eine Kachelung vorgenommen.
-In der folgenden Abbildung \ref{kachelung} ist das Prinzip dargestellt: Es wird festgestellt, wie groß ein rechteckiger Bereich des angeforderten Ausschnitts maximal sein darf, damit er noch vollständig in den Speicher passt. Als Randbedingung gilt, dass angrenzende Kacheln um mindestens die minimale Landebahnlänge (z. B. 2000m) überlappen müssen. Dadurch ist sichergestellt, dass aufgrund von Kachelrändern keine potentiellen Bahnen übersehen werden. Das Schlimmste, was dadurch passieren kann ist, dass eine potentielle Bahn in beiden Kacheln gefunden wird und dadurch doppelt in die Datenbank eingetragen wird.
+Falls der angeforderte Ausschnitt zu groß ist, um in den Speicher zu passen, wird automatisch eine Kachelung vorgenommen.
+In der folgenden Abbildung \ref{kachelung} ist das Prinzip dargestellt: Es wird festgestellt, wie groß ein rechteckiger Bereich des angeforderten Ausschnitts maximal sein darf, damit er noch vollständig in den Speicher passt. Als Randbedingung gilt, dass angrenzende Kacheln um mindestens die minimale Landebahnlänge (z. B. 2000~m) überlappen müssen. Dadurch ist sichergestellt, dass aufgrund von Kachelrändern keine potentiellen Bahnen übersehen werden. Das Schlimmste, was dadurch passieren kann ist, dass eine potentielle Bahn in beiden Kacheln gefunden wird und dadurch doppelt in die Datenbank eingetragen wird.
 
 \begin{figure}[ht]
 \centering
@@ -210,11 +210,11 @@ In der aktuellen Implementierung ist eine künstliche Beschränkung auf die Häl
 
 Eine große Herausforderung bei der Verarbeitung von Geodaten stellen die verwendeten Projektionen und Koordinatensysteme dar. Da es nicht möglich ist eine Kugeloberfläche (genauer eine Elipsoidoberfläche) gleichzeitig längen- und winkeltreu auf eine Ebene zu projizieren, existiert eine Vielzahl verschiedener Projektionssysteme, welche immer einen gewissen Kompromiss aus den gewählten Anforderungen darstellen. So listet allein die \href{http://geotiff.maptools.org/proj_list/}{"`GeoTIFF Projections Transform List"'} über 40 verschiedene, offensichtlich gängige Projektionen für GeoTIFF Datensätze auf.
 
-Glücklicherweise gibt es eine sehr umfangreiche und relativ gut dokumentierte open source Bibliothek, welche die Umrechnung der verschiedenen Projektionen und Koordinatensysteme abstrahiert und zur Verfügung stellt. Diese \href{http://www.gdal.org/}{"`GDAL - Geospatial Data Abstraction Library"'} kommt auch in diesem Projekt zum Einsatz und ermöglicht es auf relativ einfache Art und Weise die Daten aus dem GeoTIFF zu extrahieren und mit Koordinaten im WGS84-Koordinatensystem\footnote{siehe hierzu als Einstieg: \href{https://de.wikipedia.org/wiki/World_Geodetic_System_1984}{https://de.wikipedia.org/wiki/World\_Geodetic\_System\_1984}} in Einklang zu bringen. Das WGS84 System ist das aktuell in der Luftfahrt verwendete Koordinatensystem und wird auch in Navigationssystemen und insbesondere in Kartendiensten im Internet verwendet. Koordinaten im WGS84-System werden über die bekannten zwei Werte von geographischer Länge (Longitude) und geographischer Breite (Latitude) angegeben. Das Büro von Prof. Schiffmann an der Fernuniversität Hagen hat in diesem System z. B. die Koordinaten \href{http://bl.ocks.org/d/94faa16e1c8cb9d9226902f9fb0cc36c}{Lat: 51.37632449291616N, Long:7.493609189987183E}
+Glücklicherweise gibt es eine sehr umfangreiche und relativ gut dokumentierte open source Bibliothek, welche die Umrechnung der verschiedenen Projektionen und Koordinatensysteme abstrahiert und zur Verfügung stellt. Diese \href{http://www.gdal.org/}{"`GDAL - Geospatial Data Abstraction Library"'} kommt auch in diesem Projekt zum Einsatz und ermöglicht es auf relativ einfache Art und Weise, die Daten aus dem GeoTIFF zu extrahieren und mit Koordinaten im WGS84-Koordinatensystem\footnote{siehe hierzu als Einstieg: \href{https://de.wikipedia.org/wiki/World_Geodetic_System_1984}{https://de.wikipedia.org/wiki/World\_Geodetic\_System\_1984}} in Einklang zu bringen. Das WGS84 System ist das aktuell in der Luftfahrt verwendete Koordinatensystem und wird auch in Navigationssystemen und insbesondere in Kartendiensten im Internet verwendet. Koordinaten im WGS84-System werden über die bekannten zwei Werte von geographischer Länge (Longitude) und geographischer Breite (Latitude) angegeben. Das Büro von Prof. Schiffmann an der Fernuniversität Hagen hat in diesem System z. B. die Koordinaten \href{http://bl.ocks.org/d/94faa16e1c8cb9d9226902f9fb0cc36c}{Lat: 51.37632449291616N, Long:7.493609189987183E}
 
-Mit Hilfe der erwähnten Bibliothek werden innerhalb der Klasse \texttt{GeoTIFFHandler} Funktionen bereitgestellt, die von WGS84-Koordinaten auf Pixel im Speicher und umgekehrt umrechnen können. Damit kann die Durchmusterung auf einem reinen Pixel basierten Koordinatensystem erfolgen, während Zuordnung von Geokoordinaten vollständig aus dem Durchmusterungsprozess heraus abstrahiert ist. Es muss dem GeoTIFF-Handler lediglich am Anfang mitgeteilt werden, welcher rechteckige Ausschnitt (in Geokoordinaten) aus dem Datensatz eingelesen werden soll. die Durchmusterung findet dann auf einem rechteckigen Pixelbereich statt. Gefundenen Bahnen werden über Ihren Anfangs- und Endpunkt in Pixel-Koordinaten und ihre Breite charakterisiert und vom \texttt{GeoTIFFHandler} auf Koordinaten in WGS84 abgebildet.
+Mit Hilfe der erwähnten Bibliothek werden innerhalb der Klasse \texttt{GeoTIFFHandler} Funktionen bereitgestellt, die von WGS84-Koordinaten auf Pixel im Speicher und umgekehrt umrechnen können. Damit kann die Durchmusterung auf einem reinen Pixel basierten Koordinatensystem erfolgen, während Zuordnung von Geokoordinaten vollständig aus dem Durchmusterungsprozess heraus abstrahiert ist. Es muss dem GeoTIFF-Handler lediglich am Anfang mitgeteilt werden, welcher rechteckige Ausschnitt (in Geokoordinaten) aus dem Datensatz eingelesen werden soll. Die Durchmusterung findet dann auf einem rechteckigen Pixelbereich statt. Gefundene Bahnen werden über Ihren Anfangs- und Endpunkt in Pixel-Koordinaten und ihre Breite charakterisiert und vom \texttt{GeoTIFFHandler} auf Koordinaten in WGS84 abgebildet.
 
-\paragraph{Schwäche der vorliegenden Implementierung:} Leider hat sich zum Ende der Bearbeitungszeit herausgestellt, dass bei einem Datensatz in der Größe von NRW die zuvor getroffene Annahme falsch ist, dass das GeoTIFF-Pixel-Rechteck an jeder Stelle in Nord-Süd- bzw. Ost-West-Richtung ausgerichtet ist. In der vorliegenden Implementierung wird implizit davon ausgegangen, dass der rechte Nachbar eines jeden Pixels genau in östlicher (also 90\degree) Richtung liegt, und der untere Nachbar in südlicher (also 180\degree) Richtung. Das ist aber aufgrund der schon erwähnten Probleme mit der Projektion eines Elipsoiden auf eine Ebene nicht korrekt und so ergeben sich über die gesamte Fläche Abweichungen von wenigen Grad, wenn diese Annahme bei der Durchmusterung auf Pixel-ebene aufrecht erhalten wird. Da es sich bei der vorliegenden Implementierung bisher noch eher um einen Proof-of-Concept handelt wurden diese Abweichungen von der geforderten Richtung toleriert. Im Ausblick wird ein möglicher Lösungsansatz angesprochen um dieses Problem zu lösen.
+\paragraph{Schwäche der vorliegenden Implementierung:} Leider hat sich zum Ende der Bearbeitungszeit herausgestellt, dass bei einem Datensatz in der Größe von NRW die zuvor getroffene Annahme falsch ist, dass das GeoTIFF-Pixel-Rechteck an jeder Stelle in Nord-Süd- bzw. Ost-West-Richtung ausgerichtet ist. In der vorliegenden Implementierung wird implizit davon ausgegangen, dass der rechte Nachbar eines jeden Pixels genau in östlicher (also 90\degree) Richtung liegt, und der untere Nachbar in südlicher (also 180\degree) Richtung. Das ist aber aufgrund der schon erwähnten Probleme mit der Projektion eines Elipsoiden auf eine Ebene nicht korrekt und so ergeben sich über die gesamte Fläche Abweichungen von wenigen Grad, wenn diese Annahme bei der Durchmusterung auf Pixel-Ebene aufrecht erhalten wird. Da es sich bei der vorliegenden Implementierung bisher noch eher um einen Proof-of-Concept handelt, wurden diese Abweichungen von der geforderten Richtung toleriert. Im Ausblick wird ein möglicher Lösungsansatz angesprochen, um dieses Problem zu lösen.
 
 
 \subsection{Das \texttt{GeoTIFFHandler}-Objekt}
@@ -244,7 +244,7 @@ resultType getTilingInfo(const geoCoord topLeft, const geoCoord bottomRight,
 		tilingCharacteristics *tilingResult);
 \end{lstlisting}
 
-das \texttt{GeoTIFFHandler}-Objekt angewiesen werden das Einlesen der Daten in den Speicher vorzubereiten und Informationen darüber bereitzustellen, ob die Daten eventuell in mehreren Kacheln verarbeitet werden müssen. Dazu wird eine spezielle Datenstruktur gefüllt:
+das \texttt{GeoTIFFHandler}-Objekt angewiesen werden, das Einlesen der Daten in den Speicher vorzubereiten und Informationen darüber bereitzustellen, ob die Daten eventuell in mehreren Kacheln verarbeitet werden müssen. Dazu wird eine spezielle Datenstruktur gefüllt:
 \begin{lstlisting}[language=myC]
 struct tilingCharacteristics {
 	int overallXSize = 0, overallYSize = 0;	
@@ -264,7 +264,7 @@ struct tilingCharacteristics {
 };
 \end{lstlisting}
 
-Diese Angaben sind ausreichend um die Durchmusterung auf Pixelebene zu beginnen. Das \texttt{GeoTIFFHandler}-Objekt kann angewiesen werden nacheinander die einzelnen Kacheln (oder auch nur die eine Kachel) in den Speicher zu laden, so dass sie durchsucht werden können. Die gesamte Speicherverwaltung wird duch den \texttt{GeoTIFFHandler} übernommen, weswegen vor dem Laden der nächsten Kachel auch die aktuell verwendete Kachel explizit wieder freigegeben werden muss.
+Diese Angaben sind ausreichend, um die Durchmusterung auf Pixelebene zu beginnen. Das \texttt{GeoTIFFHandler}-Objekt kann angewiesen werden, nacheinander die einzelnen Kacheln (oder auch nur die eine Kachel) in den Speicher zu laden, so dass sie durchsucht werden können. Die gesamte Speicherverwaltung wird durch den \texttt{GeoTIFFHandler} übernommen, weswegen vor dem Laden der nächsten Kachel auch die aktuell verwendete Kachel explizit wieder freigegeben werden muss.
 
 Zusätzlich werden noch einige Datenstrukturen und Hilfsfunktionen zur Verfügung gestellt, die (hoffentlich einigermaßen) selbsterklärend sind.
 Die wesentlichen zur Verfügung gestellten Funktionen sind:
@@ -692,7 +692,7 @@ Bevor Codeausführung mittels Parallelverarbeitung zur Beschleunigung gebracht w
 
 Der Code wurde mit einem gcc Version 4.8.5 devtoolset version 4 compiliert. Per default findet dabei eine Übersetzung ohne eingeschalteten Optimizer statt. 
 Durch die Benutzung des -O3 Optimizer Direktivs ist eine Codebeschleunigung von 1300~\% (11 sec vs. 147 sec) beobachtet worden. 
-Eine Übersicht über die verwendeten Optimierungsschritte sind unter \href{https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html}{https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html} einzusehen.
+Eine Übersicht über die verwendeten Optimierungsschritte sind unter \footnote{\url{https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html}} einzusehen.
 
 \chapter{Komponente "`databaseManager"'}
 
@@ -723,7 +723,7 @@ Der Datenbank Manager ist der Einstiegspunkt in das System. Er startet selbstän
 Es wurde eine Datenbank gesucht, die Geodaten im \href{http://geojson.org/}{GeoJSON}-Format möglichst direkt unterstützt. Eine dafür gut geeignete Datenbank, die dieses Format und spezielle Abfragen darauf, unterstützt ist \href{https://docs.mongodb.com/}{MongoDB}. Diese Datenbank ist der Klasse der NoSQL-Datenbanken\footnote{siehe dazu als Einstieg: \href{https://de.wikipedia.org/wiki/NoSQL}{https://de.wikipedia.org/wiki/NoSQL}.} zuzuordnen und zur Aufnahme von beliebigen JSON Objekten geeignet. 
 
 Insbesondere werden über spezielle Abfragen und Operationen auch GeoJSON-Daten unterstützt.
-MongoDB unterstützt unter anderem direkte geographische Abfragen, so dass auch eine Abfrage nach allen Notlandeflächen in maximal 20km Entfernung recht leicht möglich sind. Siehe dazu \href{https://docs.mongodb.com/manual/reference/operator/query-geospatial/}{Geospatial Query Operators}.
+MongoDB unterstützt unter anderem direkte geographische Abfragen, so dass auch eine Abfrage nach allen Notlandeflächen in maximal 20~km Entfernung recht leicht möglich sind. Siehe dazu \href{https://docs.mongodb.com/manual/reference/operator/query-geospatial/}{Geospatial Query Operators}.
 
 In der Datenbank sollen gefundene Landeflächen als Polygonumriss in einem GeoJSON mit ihrer Richtung und weiteren Parametern über Ihre Minimaleigenschaften eingetragen werden. Konkret sieht ein Beispieleintrag so aus:
 \begin{lstlisting}[language=JavaScript]
@@ -776,16 +776,16 @@ In der Datenbank sollen gefundene Landeflächen als Polygonumriss in einem GeoJS
 }
 \end{lstlisting}
 
-Die Datenbank kann über die Koordinaten in der \emph{geometry} Property einen sogenannten 2D-Sphere-Index\footnote{siehe dazu: \href{https://docs.mongodb.com/manual/core/2dsphere/}{https://docs.mongodb.com/manual/core/2dsphere/}} anlegen um Abfragen über räumliche Eigenschaften direkt zu unterstützen.
+Die Datenbank kann über die Koordinaten in der \emph{geometry} Property einen sogenannten 2D-Sphere-Index\footnote{siehe dazu: \href{https://docs.mongodb.com/manual/core/2dsphere/}{https://docs.mongodb.com/manual/core/2dsphere/}} anlegen, um Abfragen über räumliche Eigenschaften direkt zu unterstützen.
 
-MongoDB unterstützt auch eine Abfrage \href{https://docs.mongodb.com/manual/reference/operator/query/geoIntersects/#op._S_geoIntersects}{\texttt{\$geoIntersects}}. Damit ist es möglich Überlappungen einer Fläche mit bereits vorhandenen Objekten in der Datenbank abzufragen. 
+MongoDB unterstützt auch eine Abfrage \href{https://docs.mongodb.com/manual/reference/operator/query/geoIntersects/#op._S_geoIntersects}{\texttt{\$geoIntersects}}. Damit ist es möglich, Überlappungen einer Fläche mit bereits vorhandenen Objekten in der Datenbank abzufragen. 
 Falls es Überlappungen gibt, können alle überlappenden Landeflächen einer Richtung zu einem gemeinsamen Objekt zusammengefasst werden, um die Anzahl der Objekte zur Anzeige zu minimieren.
 
 Auch kann die Abfrage der Daten auf einen bestimmten Kartenausschnitt begrenzt werden, so dass nicht immer alle gefundenen potentiellen Notlandefelder zur Anzeige der Ergebnisse verarbeitet werden müssen.
 
 \section{Express-Server App}
 
-Wie bereits mehrfach erwähnt nimmt der Database Manager seine Befehle vom Benutzer per REST-API entgegen. Bei einer REST-API (Representational State Transfer) stellt der Webserver verschiedene Endpunkte per HTTP bereit und startet bei Ereignissen (GET, POST, PUT, DELETE) auf diesen Endpunkten bestimmte Aktionen oder antwortet mit Daten. Für die vorliegende Aufgabe werden nur wenige relativ einfache Befehle benötigt. Die zur Verfügung gestellten Endpunkte sind:
+Wie bereits mehrfach erwähnt, nimmt der Database Manager seine Befehle vom Benutzer per REST-API entgegen. Bei einer REST-API (Representational State Transfer) stellt der Webserver verschiedene Endpunkte per HTTP bereit und startet bei Ereignissen (GET, POST, PUT, DELETE) auf diesen Endpunkten bestimmte Aktionen oder antwortet mit Daten. Für die vorliegende Aufgabe werden nur wenige relativ einfache Befehle benötigt. Die zur Verfügung gestellten Endpunkte sind:
 
 \begin{itemize}
 	\item GET auf \emph{/}: Auf dem Index-Endpunkt liefert die Express-App die HTML-Seite und zugehöriges JavaScript für den Client aus.
