--- a/planning/Vortrag/structure.tex
+++ b/planning/Vortrag/structure.tex
@@ -101,6 +101,12 @@ authoryear,
 \definecolor{DarkGreen}{rgb}{0.0,0.4,0.0} % Comment color
 \definecolor{highlight}{RGB}{255,251,204} % Code highlight color
 
+\usepackage{savesym}	%see http://www.tex.ac.uk/FAQ-alreadydef.html why we need this stunt here
+\savesymbol{Square}
+\usepackage{bbding}
+\restoresymbol{BBDing}{Square}
+%\newcommand{\Checkmark}{\@chooseSymbol{'041}}
+
 %%% listingsbackground from http://tex.stackexchange.com/a/85628/123262
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
