--- a/planning/Vortrag/structure.tex
+++ b/planning/Vortrag/structure.tex
@@ -105,7 +105,8 @@ authoryear,
 \savesymbol{Square}
 \usepackage{bbding}
 \restoresymbol{BBDing}{Square}
-%\newcommand{\Checkmark}{\@chooseSymbol{'041}}
+
+\usepackage{tikz} % https://tex.stackexchange.com/a/13095
 
 %%% listingsbackground from http://tex.stackexchange.com/a/85628/123262
 \makeatletter
